# v8

./: .gitignore  CMakeLists.txt  gfx_lib.sln  gfx_lib_sln.pro  update_lib_dirs.sh  v8.sln
gfx_lib/: ReadMe.txt  camera.cc  camera.h  camera.inl  circle.h  color.h  details.h  ellipse.h  gfx_lib.pro  gfx_lib.vcxproj  gfx_lib.vcxproj.filters  gfx_math.h  gfx_misc.h  light.cc  light.h  line.h  math.h  matrix2X2.h  matrix2X2.inl  matrix3X3.cc  matrix3X3.h  matrix3X3.inl  matrix4X4.cc  matrix4X4.h  matrix4X4.inl  pch_hdr.h  plane.h  quaternion.h  quaternion.inl  rectangle.h  vector2.h  vector3.cc  vector3.h  vector3.inl  vector4.cc  vector4.h  vector4.inl
gfx_lib_tests/: gfx_lib_tests.pro  gfx_lib_tests.vcxproj  gfx_lib_tests.vcxproj.filters  main.cc  matrix4_tests.cc
lib/base/: CMakeLists.txt  debug_helpers.cc  v8_base.vcxproj  v8_base.vcxproj.filters  win32_utils.cc
lib/math/: CMakeLists.txt  ReadMe.txt  camera.cc  color.cc  light.cc  math.vcxproj  math.vcxproj.filters  pch_hdr.h
lib/rendering/: vertex_shader.h
py_copylib/: py_copylib.py  py_copylib.pyproj
setup_lib_sdk/: setup_lib_sdk.py  setup_lib_sdk.pyproj
unit_tests/: color_tests.cc  matrix2x2_unittests.cc  matrix3_tests.cc  matrix4_tests.cc  quaternion_unit_tests.cc  scoped_handle_unittests.cc  scoped_ptr_unit_tests.cc  transform_tests.cc  unit_tests.vcxproj  unit_tests.vcxproj.filters  vector3_unit_tests.cc
v8/: ReadMe.txt  pch_hdr.h  v8.vcxproj  v8.vcxproj.filters
v8/base/: auto_lock.h  compiler_warnings.h  compound_types.h  crt_handle_policies.h  debug_helpers.cc  debug_helpers.h  fundamental_types.h  misc.h  pointer_policies.h  scoped_handle.h  scoped_lock.h  scoped_pointer.h  shared_handle.h  shared_pointer.h  timers.h  win32_handle_policies.h  win32_utils.cc  win32_utils.h
v8/math/: camera.cc  camera.h  camera.inl  circle.h  color.h  gfx_misc.h  light.cc  light.h  line.h  math_constants.h  math_utils.h  matrix2X2.h  matrix2X2.inl  (+13 more)
(+69 files in other folders)
